remove quartz implementation